# qmerge

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
MergeExample/: .gitignore  Merge.toml  MergeExample.csproj  QMerge.toml
MergeExample/src/: Example.cs  PinkCute.cs  Plugin.cs  Tests.cs
MergeExample/src/Hooks/: GameNoteControllerInit.cs  MainMenuViewControllerDidActivate.cs
MergeExample/src/QMerge/: Hook.cs
MergeExample/src/Tests/: FieldInjection.cs  HFADouble.cs  HFASingle.cs  SkipOriginal.cs  Tests.cs
QMergeCore/: .gitignore  Directory.Build.targets  Merge.toml  QMerge.toml  QMergeCore.csproj
QMergeCore/src/: Diagnostics.cs
QMergeCore/src/Hooking/: Hook.cs  HookManager.cs
QMergeCore/src/Logging/: Logger.cs
QMergeCore/src/Natives/: NativeHelper.cs
applier/: Cargo.toml  README.md  build.rs  debug.sh  test.sh
applier/codegen_api/: codegen_api.cpp  codegen_api.h
applier/il2cpp_types/: Cargo.toml  build.rs
applier/il2cpp_types/src/: lib.rs
applier/proc_macro/: Cargo.toml
applier/proc_macro/src/: lib.rs
applier/src/: abi.rs  asm.rs  codegen_api.rs  data_dirs.rs  hook.rs  il2cpp_types.rs  lib.rs  loader.rs  metadata_builder.rs  modloader.rs  natives.rs  setup.rs  types.rs  utils.rs  xref.rs
applier/src/asm/: aarch64.rs
applier/src/hook/: abi.rs  alloc.rs  codegen.rs
applier/src/loader/: applier.rs  metadata_builder.rs
applier_mod/: CMakeLists.txt  build.ps1  copy.ps1  mod.json  qpm.json  restart-game.ps1
applier_mod/include/merge_codegen/: il2cpp-codegen.h
applier_mod/src/: main.cpp
data/: Cargo.toml
data/src/: lib.rs
example_mod/: .gitignore  Merge.toml  MergeExample.csproj  README.md
example_mod/src/: Example.cs
include/merge/: codegen.h
src/: adb.rs  build.rs  clang.rs  cli.rs  config.rs  data.rs  error.rs  main.rs  manifest.rs  modules.rs  package.rs  type_definitions.rs  upload.rs  utils.rs
tools/DllsGen/: .gitignore  DllsGen.sln
tools/DllsGen/DllsGen/: DllsGen.csproj  MethodCopier.cs  ModuleProcessor.cs  Program.cs  ReferenceConverter.cs  SmallFixes.cs  VTableFixer.cs
