[workspace]
members = ["data", "applier"]

[package]
name = "qmerge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merge_data = { path = "./data" }
clap = { version = "3.1", features = ["derive"] }
anyhow = "1"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
dirs = "4"
