[workspace]
members = ["data", "applier", "applier/il2cpp_types"]

[package]
name = "qmerge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merge_data = { path = "./data" }
il2cpp_metadata_raw = { git = "https://github.com/StackDoubleFlow/brocolib.git" }
clap = { version = "3.1", features = ["derive"] }
color-eyre = "0.6"
toml = "0.5"
toml_edit = "0.14"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "4"
zip = { version = "0.6", features = ["deflate"], default-features = false }

[patch.crates-io]
bad64-sys = { git = "https://github.com/StackDoubleFlow/bad64-sys" }
