[package]
name = "merge_applier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merge_data = { path = "../data" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bad64 = "0.6"
paranoid-android = "0.2"
tracing = { version = "0.1", features = [
    "std",
], default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
tracing-error = { version = "0.2", default-features = false }
cfg-if = "1"
dlopen = "0.1"
anyhow = "1"

[target.'cfg(not(target_os = "android"))'.dependencies]
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "smallvec",
], default-features = false }
